# field_compression

./: LICENSE  README.md  pyproject.toml  requirements.txt
field_compression/: __init__.py  field_compression.py
